--- a/css/CCVC.css
+++ b/css/CCVC.css
@@ -1956,5 +1956,23 @@ footer .social-footer li:hover a {
 
 
 
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;   /* centers the rows */
+    gap: 15px;
+}
+
+.link-row {
+    display: flex;
+    justify-content: center; /* centers links within row */
+    gap: 120px;               /* controls spacing between columns */
+}
+
+.link-row a {
+    color: white;
+	width: 100px;
+    text-decoration: none;
+}
 
 
